# Laba3_OS

./: CMakeLists.txt
Report_OS_D 3/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
include/: crossplatform.h  stringutils.h
src/: child.c  crossplatform.c  parent.c  stringutils.c
